8329581: Java launcher no longer prints a stack trace